added chat demo